# my-auto-ai-writer

./: .env.custom_model_example  .env.example  .gitignore  .pre-commit-config.yaml  AI_Novel_Generator_PRD.md  CHANGELOG.md  CHAPTER_GENERATION_BUG_FIX_REPORT.md  Concept_Validation_Design_Document.md  FRONTEND_WORD_COUNT_FIX_REPORT.md  Multi_LLM_Provider_Architecture.md  PERFORMANCE_OPTIMIZATION_COMPLETED.md  PROGRESSIVE_OUTLINE_IMPROVEMENT_REPORT.md  Project_Development_Plan.md  QUALITY_ASSESSMENT_COMPLETION.md  README.md  SEAMLESS_TRANSITION_AND_COMPLEXITY_IMPROVEMENT.md  debug_export.py  plan.md  prd.md  pyproject.toml  setup_custom_model.py  start_api.py  test_api.py  test_chapter_count_fix.py  test_chapter_endings.py  test_chapter_generation_fix.py  test_comprehensive_fix.py  test_config.py  test_config_loading.py  test_export.py  test_export_fix.py  test_fix_verification.py  test_frontend_integration.py  test_generation_logging.py  test_imports.py  test_improvements_simple.py  test_integration_simple.py  test_json_parsing_fix.py  test_logging.py  test_narrative_coherence.py  (+8 more)
.roo/: system-prompt-shotcode  system-prompt-task-master
.roo/rules/: roo_rules.md
docs/: API_FRAMEWORK_SETUP_REPORT.md  API_FRONTEND_IMPLEMENTATION_REPORT.md  CHAPTER_ENDING_IMPROVEMENT_REPORT.md  CHAPTER_GENERATION_ENGINE_REPORT.md  CIRCULAR_IMPORT_FIX_REPORT.md  CONSISTENCY_CHECKER_IMPLEMENTATION_REPORT.md  CORE_ALGORITHMS_IMPLEMENTATION_REPORT.md  DELETE_COMPLETED_NOVELS_FEATURE.md  GENERATION_LOGGING_IMPLEMENTATION_REPORT.md  NARRATIVE_COHERENCE_IMPLEMENTATION_REPORT.md  NOVEL_GENERATION_FLOW.md  PERFORMANCE_OPTIMIZATION_COMPLETION_REPORT.md  PROJECT_INITIALIZATION_REPORT.md  RATE_LIMIT_EXEMPTION_FIX_REPORT.md  SYNC_EXECUTION_IMPLEMENTATION.md  SYSTEM_INTEGRATION_REPORT.md  quality_assessment_demo.md  quality_assessment_summary.md
frontend/: generate.html  home.html  index.html  novel-detail.html  novel-detail.js  projects.html  script.js  settings.html  styles.css
scripts/: demo_api_frontend.py  run_integration_tests.py  run_performance_tests.py  start_api.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/api/middleware/: __init__.py  cors.py  (+3 more)
src/core/: __init__.py  chapter_generator.py  character_system.py  concept_expander.py  concurrent_chapter_generator.py  consistency_checker.py  data_models.py  exceptions.py  narrative_coherence.py  novel_generator.py  outline_generator.py  progressive_outline_generator.py  quality_assessment.py  quality_integration.py  strategy_selector.py  sync_novel_generator.py  sync_wrapper.py
src/models/: __init__.py  config_models.py  database.py  novel_models.py  user_models.py
src/utils/: __init__.py  cache.py  config.py  generation_logger.py  llm_client.py  logger.py  monitoring.py  performance_cache.py
tests/: __init__.py  test_project_setup.py
tests/acceptance/: test_final_acceptance.py
tests/integration/: test_api_frontend_integration.py  test_consistency_checker_integration.py  test_novel_generation_flow.py
tests/performance/: test_performance.py  test_performance_optimization.py
tests/unit/: test_api.py  test_database.py  test_llm_client.py
(+24 files in other folders)
